--- a/ECOMMERCEAPI/package.json
+++ b/ECOMMERCEAPI/package.json
@@ -13,7 +13,9 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "stripe": "^16.6.0"
   }
 }
