--- a/admin/package.json
+++ b/admin/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "ecommerce",
+  "name": "admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^5.16.5",
-    "@mui/material": "^5.16.5",
-    "@reduxjs/toolkit": "^2.2.7",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
-    "crypto-browserify": "^3.12.0",
     "cryptojs": "^2.5.3",
     "dotenv": "^16.4.5",
     "mongoose": "^8.5.2",
@@ -20,8 +18,8 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
-    "react-scripts": "^5.0.1",
-    "react-stripe-checkout": "^2.6.3",
+    "react-scripts": "5.0.1",
+    "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
@@ -49,8 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "prettier": "^3.3.3"
   }
 }
