--- a/admin/package.json
+++ b/admin/package.json
@@ -8,12 +8,14 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@mui/x-data-grid": "^7.12.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.3",
+    "axios": "^1.7.4",
     "cryptojs": "^2.5.3",
     "dotenv": "^16.4.5",
+    "firebase": "^10.13.0",
     "mongoose": "^8.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -23,6 +25,7 @@
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.12",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
